<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<resources>
    <string name="app_name">devinaditya_s_application</string>
    <string name="loading">Loading…</string>
    <string name="no_internet_connection">No internet connection!</string>
<string name="lbl_search_a_docter">Search a Docter</string>
  <string name="msg_ravishka_sathsa">Ravishka Sathsara</string>
  <string name="lbl_m">M</string>
  <string name="lbl_evening">EVENING</string>
  <string name="lbl_back">Back</string>
  <string name="lbl_jadwal_obat">Jadwal Obat</string>
  <string name="lbl_s">S</string>
  <string name="lbl_dr_upul">Dr.Upul</string>
  <string name="lbl_t">T</string>
  <string name="lbl_mark_all">Mark All</string>
  <string name="lbl_detailes">Detailes</string>
  <string name="lbl_w">W</string>
  <string name="lbl_12_00">12:00</string>
  <string name="lbl_about">About</string>
  <string name="msg_already_have_an">Already Have an Account? Log in</string>
  <string name="lbl_log_out">Log Out</string>
  <string name="lbl_cvv">CVV</string>
  <string name="lbl_order">Order</string>
  <string name="msg_may_i_help_you">May I help you ?</string>
  <string name="lbl_15_00">15:00</string>
  <string name="lbl_pay_now">Pay Now</string>
  <string name="lbl_20_october_2023">20 October 2023</string>
  <string name="lbl_username">Username</string>
  <string name="lbl_expiry_date">Expiry Date</string>
  <string name="lbl_sun">Sun </string>
  <string name="lbl_f">F</string>
  <string name="lbl_date">Date</string>
  <string name="lbl_pembayaran">Pembayaran</string>
  <string name="lbl_doctor">Doctor</string>
  <string name="lbl_dr_eka">Dr. Eka</string>
  <string name="lbl_history">History</string>
  <string name="lbl_18_00">18:00</string>
  <string name="msg_cancer_speciali">Cancer Speciality</string>
  <string name="lbl_reschedule">Reschedule</string>
  <string name="msg_total_rp_135_0">Total
Rp. 135.000,-</string>
  <string name="lbl_welcome">Welcome</string>
  <string name="lbl_30">30</string>
  <string name="lbl_31">31</string>
  <string name="lbl_hospital">Hospital</string>
  <string name="lbl_card_number">Card Number</string>
  <string name="lbl_time">Time</string>
  <string name="lbl_cash_payment">Cash Payment</string>
  <string name="lbl_password">Password :</string>
  <string name="lbl_juli_2023">Juli 2023</string>
  <string name="lbl_13_00">13:00</string>
  <string name="msg_rumah_sakit_kar">Rumah Sakit Karya Medika</string>
  <string name="lbl_jadwal_janji">Jadwal Janji</string>
  <string name="lbl_buat_janji2">Buat Janji</string>
  <string name="lbl_mon">Mon</string>
  <string name="lbl_mon_5">Mon 5</string>
  <string name="lbl_1_hr">1 hr</string>
  <string name="lbl_dr_silva">Dr.Silva</string>
  <string name="lbl_20">20</string>
  <string name="lbl_23">23</string>
  <string name="lbl_24">24</string>
  <string name="lbl_21">21</string>
  <string name="lbl_16_00">16:00</string>
  <string name="lbl_22">22</string>
  <string name="lbl_27">27</string>
  <string name="lbl_28">28</string>
  <string name="lbl_25">25</string>
  <string name="lbl_26">26</string>
  <string name="lbl_menu">Menu</string>
  <string name="lbl_29">29</string>
  <string name="lbl_noon">NOON</string>
  <string name="lbl_chat_doctor">CHAT DOCTOR</string>
  <string name="lbl_chat">Chat</string>
  <string name="lbl_dr_cindy2">Dr.Cindy</string>
  <string name="lbl_today">TODAY</string>
  <string name="lbl_chats">Chats</string>
  <string name="lbl_see_all">See All</string>
  <string name="lbl_12">12</string>
  <string name="lbl_13">13</string>
  <string name="lbl_10">10</string>
  <string name="lbl_12_50">12.50</string>
  <string name="lbl_11">11</string>
  <string name="lbl_16">16</string>
  <string name="lbl_17">17</string>
  <string name="lbl_14">14</string>
  <string name="lbl_name">NAME</string>
  <string name="lbl_15">15</string>
  <string name="lbl_11_00">11:00</string>
  <string name="lbl_18">18</string>
  <string name="lbl_19">19</string>
  <string name="lbl_buat_janji">BUAT JANJI</string>
  <string name="lbl_profile">Profile</string>
  <string name="lbl_name2">Name</string>
  <string name="msg_jadwal_minum_ob">Jadwal Minum Obat</string>
  <string name="lbl_11_00_am">11.00 AM</string>
  <string name="msg_your_payment_is">Your Payment Is Successfuly</string>
  <string name="msg_personal_detail">Personal Details</string>
  <string name="lbl_night">NIGHT</string>
  <string name="lbl_email">Email :</string>
  <string name="lbl_adress">Adress</string>
  <string name="lbl_1">1</string>
  <string name="lbl_obat_a">Obat A.</string>
  <string name="lbl_konsultasi">Konsultasi</string>
  <string name="lbl_2">2</string>
  <string name="lbl_14_00">14:00</string>
  <string name="lbl_morning">MORNING</string>
  <string name="lbl_3">3</string>
  <string name="lbl_obat_c">Obat C.</string>
  <string name="lbl_4">4</string>
  <string name="lbl_obat_b">Obat B.</string>
  <string name="lbl_5">5</string>
  <string name="lbl_6">6</string>
  <string name="lbl_obat_d">Obat D.</string>
  <string name="lbl_dr_cindy">Dr. Cindy</string>
  <string name="lbl_7">7</string>
  <string name="lbl_8">8</string>
  <string name="lbl_payment_method">Payment Method</string>
  <string name="lbl_9">9</string>
  <string name="lbl_ringing">Ringing</string>
  <string name="lbl_204">204</string>
  <string name="lbl_login">LOGIN</string>
  <string name="msg_worem_ipsum_dol">Worem ipsum dolor sit amet, consectetur adipiscing elit. Nunc vulputate libero et velit interdum, ac aliquet odio mattis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Curabitur tempus urna at turpis condimentum lobortis. Ut commodo efficitur neque. Ut diam quam, semper iaculis condimentum ac, vestibulum eu nisl.</string>
  <string name="lbl_dr_pawani">Dr.Pawani</string>
  <string name="lbl_lorem_ipsum">Lorem Ipsum</string>
  <string name="lbl_messages">messages</string>
  <string name="lbl_10_00_am2">10.00 AM</string>
  <string name="lbl_sun_4">Sun 4</string>
  <string name="msg_1234_8896_1145">1234 8896 1145 0896</string>
  <string name="lbl_10_02_2022">10/02/2022</string>
  <string name="msg_pilih_tanggal_d">Pilih Tanggal dan Jam</string>
  <string name="lbl_17_00">17:00</string>
  <string name="lbl_new">New</string>
  <string name="lbl_or">OR</string>
  <string name="lbl_congratulations">Congratulations</string>
  <string name="lbl_working_hours">Working Hours</string>
  <string name="lbl_card_payment">Card Payment</string>
  <string name="lbl_10_00_am">10:00 am</string>
  <string name="msg_worem_consectet">Worem consectetur adipiscing elit.</string>
  <string name="lbl_help">Help</string>
  <string name="msg_detail_janji_te">Detail Janji Temu</string>
</resources>
