<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data/>
    <LinearLayout android:id="@+id/linearRowtwo"
        android:layout_height="wrap_content"
        android:layout_width="match_parent" android:orientation="horizontal">
        <TextView android:ellipsize="end" android:id="@+id/txtTwo"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_1pxv"
            android:layout_weight="0.14" android:layout_width="0dp"
            android:singleLine="true" android:text="@string/lbl_2"
            style="@style/txtInterbold20" tools:text="@string/lbl_2"/>
        <TextView android:ellipsize="end" android:id="@+id/txtThree"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_1pxv"
            android:layout_marginStart="@dimen/_37pxh"
            android:layout_marginTop="@dimen/_1pxv"
            android:layout_weight="0.15" android:layout_width="0dp"
            android:singleLine="true" android:text="@string/lbl_3"
            style="@style/txtInterbold20" tools:text="@string/lbl_3"/>
        <TextView android:ellipsize="end" android:id="@+id/txtFour"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_1pxv"
            android:layout_marginStart="@dimen/_32pxh"
            android:layout_marginTop="@dimen/_1pxv"
            android:layout_weight="0.15" android:layout_width="0dp"
            android:singleLine="true" android:text="@string/lbl_4"
            style="@style/txtInterbold20" tools:text="@string/lbl_4"/>
        <TextView android:ellipsize="end" android:id="@+id/txtFive"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_38pxh"
            android:layout_marginTop="@dimen/_1pxv"
            android:layout_weight="0.14" android:layout_width="0dp"
            android:singleLine="true" android:text="@string/lbl_5"
            style="@style/txtInterbold20" tools:text="@string/lbl_5"/>
        <TextView android:ellipsize="end" android:id="@+id/txtSix"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_1pxv"
            android:layout_marginStart="@dimen/_33pxh"
            android:layout_marginTop="@dimen/_1pxv"
            android:layout_weight="0.15" android:layout_width="0dp"
            android:singleLine="true" android:text="@string/lbl_6"
            style="@style/txtInterbold20" tools:text="@string/lbl_6"/>
        <TextView android:ellipsize="end" android:id="@+id/txtSeven"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_1pxv"
            android:layout_marginStart="@dimen/_29pxh"
            android:layout_marginTop="@dimen/_1pxv"
            android:layout_weight="0.13" android:layout_width="0dp"
            android:singleLine="true" android:text="@string/lbl_7"
            style="@style/txtInterbold20" tools:text="@string/lbl_7"/>
        <TextView android:ellipsize="end" android:id="@+id/txtEight"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_1pxv"
            android:layout_marginStart="@dimen/_34pxh"
            android:layout_marginTop="@dimen/_1pxv"
            android:layout_weight="0.15" android:layout_width="0dp"
            android:singleLine="true" android:text="@string/lbl_8"
            style="@style/txtInterbold20" tools:text="@string/lbl_8"/>
    </LinearLayout>
</layout>
