<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data/>
    <LinearLayout android:gravity="start"
        android:id="@+id/linearColumndate"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylewhite_1">
        <LinearLayout android:gravity="start"
            android:id="@+id/linearRowdate"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_23pxh"
            android:layout_marginStart="@dimen/_23pxh"
            android:layout_marginTop="@dimen/_12pxv"
            android:layout_width="match_parent" android:orientation="horizontal">
            <TextView android:ellipsize="end" android:id="@+id/txtDate"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_1pxv"
                android:layout_marginTop="@dimen/_1pxv"
                android:layout_weight="0.29" android:layout_width="0dp"
                android:singleLine="true"
                android:text="@string/lbl_date"
                style="@style/txtInterregular10" tools:text="@string/lbl_date"/>
            <TextView android:ellipsize="end" android:id="@+id/txtTime"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_1pxv"
                android:layout_marginStart="@dimen/_87pxh"
                android:layout_weight="0.3" android:layout_width="0dp"
                android:singleLine="true"
                android:text="@string/lbl_time"
                style="@style/txtInterregular10" tools:text="@string/lbl_time"/>
            <TextView android:ellipsize="end"
                android:id="@+id/txtDoctor"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_88pxh"
                android:layout_marginTop="@dimen/_1pxv"
                android:layout_weight="0.41" android:layout_width="0dp"
                android:singleLine="true"
                android:text="@string/lbl_doctor"
                style="@style/txtInterregular10" tools:text="@string/lbl_doctor"/>
        </LinearLayout>
        <LinearLayout android:gravity="start"
            android:id="@+id/linearRowdreka"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_16pxh"
            android:layout_marginStart="@dimen/_16pxh"
            android:layout_marginTop="@dimen/_11pxv"
            android:layout_width="match_parent" android:orientation="horizontal">
            <LinearLayout android:id="@+id/linearRowdateOne"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_1pxv"
                android:layout_weight="0.82" android:layout_width="0dp" android:orientation="horizontal">
                <TextView android:ellipsize="end"
                    android:id="@+id/txtDateOne"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.65"
                    android:layout_width="0dp" android:singleLine="true"
                    android:text="@string/lbl_20_october_2023"
                    style="@style/txtInterregular10" tools:text="@string/lbl_20_october_2023"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtTimeOne"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_29pxh"
                    android:layout_weight="0.35"
                    android:layout_width="0dp" android:singleLine="true"
                    android:text="@string/lbl_10_00_am"
                    style="@style/txtInterregular10" tools:text="@string/lbl_10_00_am"/>
            </LinearLayout>
            <TextView android:ellipsize="end" android:id="@+id/txtDrEka"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_74pxh"
                android:layout_marginTop="@dimen/_1pxv"
                android:layout_weight="0.18" android:layout_width="0dp"
                android:singleLine="true"
                android:text="@string/lbl_dr_eka"
                style="@style/txtInterregular10" tools:text="@string/lbl_dr_eka"/>
        </LinearLayout>
        <TextView android:ellipsize="end" android:id="@+id/txtHospital"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_23pxh"
            android:layout_marginStart="@dimen/_23pxh"
            android:layout_marginTop="@dimen/_23pxv"
            android:layout_width="wrap_content"
            android:singleLine="true"
            android:text="@string/lbl_hospital"
            style="@style/txtInterregular10" tools:text="@string/lbl_hospital"/>
        <LinearLayout android:gravity="end"
            android:id="@+id/linearRowrumahsakitkar"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_20pxv"
            android:layout_marginEnd="@dimen/_8pxh"
            android:layout_marginStart="@dimen/_23pxh"
            android:layout_marginTop="@dimen/_12pxv"
            android:layout_width="match_parent" android:orientation="horizontal">
            <TextView android:ellipsize="end"
                android:id="@+id/txtRumahSakitKar"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_18pxv"
                android:layout_weight="0.53" android:layout_width="0dp"
                android:singleLine="true"
                android:text="@string/msg_rumah_sakit_kar"
                style="@style/txtInterregular10" tools:text="@string/msg_rumah_sakit_kar"/>
            <androidx.appcompat.widget.AppCompatButton
                android:ellipsize="end" android:gravity="center"
                android:id="@+id/btnReschedule"
                android:layout_height="@dimen/_26pxv"
                android:layout_marginStart="@dimen/_63pxh"
                android:layout_marginTop="@dimen/_5pxv"
                android:layout_width="@dimen/_110pxh"
                android:paddingBottom="@dimen/_3pxv"
                android:paddingEnd="@dimen/_13pxh"
                android:paddingStart="@dimen/_14pxh"
                android:paddingTop="@dimen/_3pxv"
                android:singleLine="true"
                android:text="@string/lbl_reschedule"
                android:textAllCaps="false"
                style="@style/btnSolidRounded_5" tools:text="@string/lbl_reschedule"/>
        </LinearLayout>
    </LinearLayout>
</layout>
