<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">
    <data/>
    <FrameLayout android:id="@+id/frameStackgrouptwo"
        android:layout_height="match_parent"
        android:layout_width="match_parent" style="@style/groupStylewhite_A700">
        <LinearLayout android:id="@+id/linearColumngrouptwo"
            android:layout_gravity="top|start"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/_10pxv"
            android:layout_width="match_parent" android:orientation="vertical">
            <androidx.appcompat.widget.Toolbar android:gravity="start"
                android:id="@+id/toolbarToolbar"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                app:contentInsetStart="0dp" style="@style/groupStyleindigo_600">
                <LinearLayout android:id="@+id/linearRowgrouptwo"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_33pxv"
                    android:layout_marginEnd="@dimen/_144pxh"
                    android:layout_marginStart="@dimen/_31pxh"
                    android:layout_marginTop="@dimen/_33pxv"
                    android:layout_width="match_parent" android:orientation="horizontal">
                    <ImageButton
                        android:background="@drawable/rectangle_bg_white_a700_radius_17_5"
                        android:id="@+id/btnGroupTwo"
                        android:layout_height="@dimen/_35pxh"
                        android:layout_width="@dimen/_35pxh"
                        android:paddingHorizontal="@dimen/_8pxh"
                        android:paddingVertical="@dimen/_8pxv"
                        android:scaleType="fitCenter"
                        android:src="@drawable/img_group2" tools:ignore="ContentDescription"/>
                    <TextView android:ellipsize="end"
                        android:id="@+id/txtPembayaran"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_1pxv"
                        android:layout_marginStart="@dimen/_77pxh"
                        android:layout_marginTop="@dimen/_8pxv"
                        android:layout_weight="0.75"
                        android:layout_width="0dp"
                        android:singleLine="true"
                        android:text="@string/lbl_pembayaran"
                        style="@style/txtAveriaSansLibreregular20" tools:text="@string/lbl_pembayaran"/>
                </LinearLayout>
            </androidx.appcompat.widget.Toolbar>
            <TextView android:gravity="start"
                android:id="@+id/txtTotalRp1350"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_83pxh"
                android:layout_marginStart="@dimen/_83pxh"
                android:layout_marginTop="@dimen/_25pxv"
                android:layout_width="match_parent"
                android:text="@string/msg_total_rp_135_0"
                style="@style/txtAveriaSansLibreregular36" tools:text="@string/msg_total_rp_135_0"/>
            <TextView android:ellipsize="end"
                android:id="@+id/txtPaymentMethod"
                android:layout_gravity="start"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_92pxh"
                android:layout_marginStart="@dimen/_92pxh"
                android:layout_marginTop="@dimen/_13pxv"
                android:layout_width="wrap_content"
                android:singleLine="true"
                android:text="@string/lbl_payment_method"
                style="@style/txtAveriaSansLibrebold24" tools:text="@string/lbl_payment_method"/>
            <LinearLayout android:id="@+id/linearRowcardPayment"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_19pxh"
                android:layout_marginStart="@dimen/_19pxh"
                android:layout_marginTop="@dimen/_24pxv"
                android:layout_width="match_parent" android:orientation="horizontal">
                <androidx.appcompat.widget.AppCompatButton
                    android:ellipsize="end" android:gravity="center"
                    android:id="@+id/btnCardPayment"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:layout_width="0dp"
                    android:paddingBottom="@dimen/_15pxv"
                    android:paddingEnd="@dimen/_30pxh"
                    android:paddingStart="@dimen/_30pxh"
                    android:paddingTop="@dimen/_15pxv"
                    android:singleLine="true"
                    android:text="@string/lbl_card_payment"
                    android:textAllCaps="false"
                    style="@style/btnSolidRoundedOutline" tools:text="@string/lbl_card_payment"/>
                <androidx.appcompat.widget.AppCompatButton
                    android:ellipsize="end" android:gravity="center"
                    android:id="@+id/btnCashPayment"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_22pxh"
                    android:layout_weight="0.5"
                    android:layout_width="0dp"
                    android:paddingBottom="@dimen/_15pxv"
                    android:paddingEnd="@dimen/_30pxh"
                    android:paddingStart="@dimen/_30pxh"
                    android:paddingTop="@dimen/_15pxv"
                    android:singleLine="true"
                    android:text="@string/lbl_cash_payment"
                    android:textAllCaps="false"
                    style="@style/btnSolidRounded_2" tools:text="@string/lbl_cash_payment"/>
            </LinearLayout>
            <TextView android:ellipsize="end"
                android:id="@+id/txtCardNumber"
                android:layout_gravity="start"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_21pxh"
                android:layout_marginStart="@dimen/_21pxh"
                android:layout_marginTop="@dimen/_34pxv"
                android:layout_width="wrap_content"
                android:singleLine="true"
                android:text="@string/lbl_card_number"
                style="@style/txtAveriaSansLibreregular18" tools:text="@string/lbl_card_number"/>
            <EditText
                android:background="@drawable/rectangle_bg_bluegray_100_4c_radius_15"
                android:ellipsize="end"
                android:hint="@string/msg_1234_8896_1145"
                android:id="@+id/etGroupThirtyTwo"
                android:inputType="text"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_19pxh"
                android:layout_marginStart="@dimen/_19pxh"
                android:layout_marginTop="@dimen/_14pxv"
                android:layout_width="match_parent"
                android:paddingBottom="@dimen/_14pxv"
                android:paddingEnd="@dimen/_30pxh"
                android:paddingStart="@dimen/_24pxh"
                android:paddingTop="@dimen/_15pxv"
                android:singleLine="true"
                android:textColorHint="@color/black_900"
                style="@style/etSolidRounded" tools:ignore="Autofill"/>
            <LinearLayout android:gravity="start"
                android:id="@+id/linearRowexpirydate"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_21pxh"
                android:layout_marginStart="@dimen/_21pxh"
                android:layout_marginTop="@dimen/_21pxv"
                android:layout_width="wrap_content" android:orientation="horizontal">
                <TextView android:ellipsize="end"
                    android:id="@+id/txtExpiryDate"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_1pxv"
                    android:layout_weight="0.73"
                    android:layout_width="0dp" android:singleLine="true"
                    android:text="@string/lbl_expiry_date"
                    style="@style/txtAveriaSansLibreregular18" tools:text="@string/lbl_expiry_date"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtCVV"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_1pxv"
                    android:layout_marginStart="@dimen/_108pxh"
                    android:layout_weight="0.27"
                    android:layout_width="0dp" android:singleLine="true"
                    android:text="@string/lbl_cvv"
                    style="@style/txtAveriaSansLibreregular18" tools:text="@string/lbl_cvv"/>
            </LinearLayout>
            <LinearLayout android:gravity="start"
                android:id="@+id/linearRowdate"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_19pxh"
                android:layout_marginStart="@dimen/_19pxh"
                android:layout_marginTop="@dimen/_12pxv"
                android:layout_width="match_parent" android:orientation="horizontal">
                <EditText
                    android:background="@drawable/rectangle_bg_bluegray_100_4c_radius_15"
                    android:ellipsize="end"
                    android:hint="@string/lbl_10_02_2022"
                    android:id="@+id/etDate" android:inputType="text"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.55"
                    android:layout_width="0dp"
                    android:paddingBottom="@dimen/_14pxv"
                    android:paddingEnd="@dimen/_30pxh"
                    android:paddingStart="@dimen/_24pxh"
                    android:paddingTop="@dimen/_15pxv"
                    android:singleLine="true"
                    android:textColorHint="@color/black_900"
                    style="@style/etSolidRounded" tools:ignore="Autofill"/>
                <androidx.appcompat.widget.AppCompatButton
                    android:ellipsize="end" android:gravity="center"
                    android:id="@+id/btnTwoHundredFour"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_13pxh"
                    android:layout_weight="0.45"
                    android:layout_width="0dp"
                    android:paddingBottom="@dimen/_15pxv"
                    android:paddingEnd="@dimen/_30pxh"
                    android:paddingStart="@dimen/_30pxh"
                    android:paddingTop="@dimen/_15pxv"
                    android:singleLine="true"
                    android:text="@string/lbl_204"
                    android:textAllCaps="false"
                    style="@style/btnSolidRounded_3" tools:text="@string/lbl_204"/>
            </LinearLayout>
            <TextView android:ellipsize="end" android:id="@+id/txtName"
                android:layout_gravity="start"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_20pxh"
                android:layout_marginStart="@dimen/_20pxh"
                android:layout_marginTop="@dimen/_36pxv"
                android:layout_width="wrap_content"
                android:singleLine="true"
                android:text="@string/lbl_name2"
                style="@style/txtAveriaSansLibreregular18" tools:text="@string/lbl_name2"/>
            <EditText
                android:background="@drawable/rectangle_bg_bluegray_100_4c_radius_15"
                android:ellipsize="end"
                android:hint="@string/msg_ravishka_sathsa"
                android:id="@+id/etGroupThirtyFive"
                android:inputType="text"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_19pxh"
                android:layout_marginStart="@dimen/_19pxh"
                android:layout_marginTop="@dimen/_14pxv"
                android:layout_width="match_parent"
                android:paddingBottom="@dimen/_14pxv"
                android:paddingEnd="@dimen/_30pxh"
                android:paddingStart="@dimen/_24pxh"
                android:paddingTop="@dimen/_15pxv"
                android:singleLine="true"
                android:textColorHint="@color/black_900"
                style="@style/etSolidRounded" tools:ignore="Autofill"/>
            <androidx.appcompat.widget.AppCompatButton
                android:ellipsize="end" android:gravity="center"
                android:id="@+id/btnPayNow"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_6pxh"
                android:layout_marginStart="@dimen/_7pxh"
                android:layout_marginTop="@dimen/_43pxv"
                android:layout_width="match_parent"
                android:paddingBottom="@dimen/_16pxv"
                android:paddingEnd="@dimen/_30pxh"
                android:paddingStart="@dimen/_30pxh"
                android:paddingTop="@dimen/_16pxv"
                android:singleLine="true"
                android:text="@string/lbl_pay_now"
                android:textAllCaps="false"
                style="@style/btnSolidRounded_4" tools:text="@string/lbl_pay_now"/>
        </LinearLayout>
    </FrameLayout>
</layout>
